Camino only - Bug 360779: Fix loading of links dropped on tabs. r=max r=ardissone sr=pink